created new config file

--- a/config/config.json
+++ b/config/config.json
@@ -1,26 +1,15 @@
 {
-  "name": "startRoom",
-  "description": "this is the room you start in",
-  "exits": [{
-    "direction": "north",
-    "destination": "nextRoom"
-  }],
-  "features": [
-    {
-      "name": "chair",
-      "behavior": {
-        "verb": "sit",
-        "output": "You sat.",
-        "doOtherStuff": "set isActivated to true somehow"
-      }
-    }
-  ],
-  "items": [{
-      "name": "watch",
-      "behavior": {
-        "verb": "look",
-        "output": "watch.getTime()",
-        "doOtherStuff": "wind the watch?"
-      }
+  "rooms": [{
+    "id": 1,
+    "exits": [{
+      "direction": "west",
+      "destination": 2
     }]
+  },{
+    "id": 2,
+    "exits": [{
+      "direction": "east",
+      "destination": 1
+    }]
+  }]
 }
