Updated to allow custom classes to be notated on Features and Items in config.json

--- a/config/config.json
+++ b/config/config.json
@@ -33,7 +33,8 @@
       "name": "compass",
       "description": "There's a compass on the map stand.",
       "detailedDescription": "An old compass.",
-      "isItem": true
+      "isItem": true,
+      "customClass": "Compass"
     }]
   },{
     "id": 4,
